# handler/service.go
@@ -12,6 +12,7 @@ import (
 type Service interface {
 	Register(ctx context.Context, regRequest *generated.RegistrationRequest) (string, []string)
 	Login(ctx context.Context, loginRequest *generated.LoginRequest) (string, error)
+	GetUserProfile(ctx context.Context, userID string) (generated.UserProfile, error)
 }
 
 type service struct {
@@ -75,4 +76,8 @@ func (s *service) Login(ctx context.Context, loginRequest *generated.LoginReques
 		return "", err
 	}
 	return jwtToken, nil
+}
+
+func (s *service) GetUserProfile(ctx context.Context, userID string) (generated.UserProfile, error) {
+	return s.Repository.GetUserProfile(ctx, userID)
 }
